feature: minor fix